test-deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: hello-openshift
    name: hello-openshift
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: hello-openshift
      deploymentconfig: hello-openshift
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        resources:
          requests:
            cpu: 100m 
            memory: 128Mi 
          limits:
            cpu: 300m 
            memory: 128Mi 
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: hello-openshift
          deploymentconfig: hello-openshift
      spec:
        containers:
        - image: openshift/hello-openshift:latest
          imagePullPolicy: IfNotPresent
          name: hello-openshift
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
          resources:
            requests:
              cpu: 100m 
              memory: 128Mi 
            limits:
              cpu: 300m 
              memory: 128Mi 
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: hello-openshift
    name: hello-openshift
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8888-tcp
      port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: hello-openshift
      deploymentconfig: hello-openshift
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: hello-openshift
    name: hello-openshift
  spec:
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: hello-openshift
      weight: 100
    wildcardPolicy: None
